plugins {
    id 'base'
}

def getGitCommitCount() {
    def stdout = new ByteArrayOutputStream()
    exec {
        commandLine 'git', 'rev-list', '--count', 'HEAD'
        standardOutput = stdout
    }
    return stdout.toString().trim().toInteger()
}

def buildNumber = getGitCommitCount()
def isSnapshot = is_snapshot == "true"

group       = 'net.quepierts.veynir'
version     = isSnapshot ? "${project_version}+build.${buildNumber}" : "${project_version}"

allprojects {
    repositories {
        mavenCentral()
    }
}

subprojects {
    plugins.withId('java') {
        java {
            toolchain {
                languageVersion.set(JavaLanguageVersion.of(17))
            }
        }

        tasks.withType(JavaCompile).configureEach {
            options.compilerArgs += [
                    '--add-modules', 'jdk.incubator.vector'
            ]
        }
    }
}